Phase 6F.4: MongoDB-certified messaging, Phase 6 complete
MongoDB is now the certified authoritative messaging store (messages,
recipients, reactions, clarifications). Postgres keeps the frozen certified
snapshot as rollback storage; normal traffic is mongo-only.

- Store abstraction (MessagingStore) with MongoMessagingStore (default) and
  explicit postgres fallback; activeStorage logged at startup
- Numeric ID continuity via mongo_sequences (never regresses), unique indexes
  on all messaging entities
- Maintenance runners gated by env flags and OFF by default; backfill hardened
  to insert-missing only (non-destructive); rollback tool dry-run first
- application.yml defaults storage=mongo; prod enables mono by default
- Docs: messaging-mongo architecture, README env vars + storage section