@@ -8,6 +8,11 @@ import com.college.placement.common.exception.ResourceNotFoundException;
 import com.college.placement.messaging.dto.ClarificationCountsResponse;
 import com.college.placement.messaging.dto.ClarificationEntryResponse;
 import com.college.placement.messaging.dto.ClarificationResponse;
+import com.college.placement.messaging.store.MessagingStore;
+import com.college.placement.messaging.store.MessagingStore.StoredEntry;
+import com.college.placement.messaging.store.MessagingStore.StoredMessage;
+import com.college.placement.messaging.store.MessagingStore.StoredPage;
+import com.college.placement.messaging.store.MessagingStore.StoredThread;
 import com.college.placement.security.SecurityUtils;
 import com.college.placement.user.User;
 import com.college.placement.user.UserRepository;
@@ -16,37 +21,36 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
 public class ClarificationService {
 
-    private final ClarificationThreadRepository threadRepository;
-    private final ClarificationEntryRepository entryRepository;
-    private final MessageRepository messageRepository;
-    private final MessageRecipientRepository recipientRepository;
+    private final MessagingStore store;
     private final UserRepository userRepository;
     private final AuditService auditService;
     private final SecurityUtils securityUtils;
 
-    @Transactional
     public ClarificationResponse createClarification(Long messageId, String content) {
         User principal = securityUtils.getCurrentUser();
         requireActive(principal);
         User currentUser = managedUser(principal);
 
-        Message message = messageRepository.findById(messageId)
-                .orElseThrow(() -> new ResourceNotFoundException("Message", messageId));
+        StoredMessage message = store.getMessage(messageId);
+        if (message == null) {
+            throw new ResourceNotFoundException("Message", messageId);
+        }
 
-        Role senderRole = message.getSender().getRole();
+        Role senderRole = roleOf(message.senderRole());
         if (senderRole != Role.PO && senderRole != Role.PC) {
             throw new ForbiddenException("Clarifications are only available on messages sent by the Placement Officer or a Placement Coordinator.");
         }
 
-        if (!recipientRepository.existsByMessageIdAndRecipientId(messageId, currentUser.getId())) {
+        if (!store.isRecipient(messageId, currentUser.getId())) {
             throw new ForbiddenException("You can only ask for clarification on messages addressed to you.");
         }
 
@@ -55,33 +59,28 @@ public class ClarificationService {
             throw new BadRequestException("Clarification content cannot be blank.");
         }
 
-        ClarificationThread thread = threadRepository.findByMessageIdAndRequesterId(messageId, currentUser.getId())
-                .orElseGet(() -> ClarificationThread.builder()
-                        .message(message)
-                        .requester(currentUser)
-                        .sender(message.getSender())
-                        .status(ClarificationStatus.OPEN)
-                        .build());
+        StoredThread thread = store.getClarificationThread(messageId, currentUser.getId());
+        if (thread == null) {
+            thread = store.createClarificationThread(messageId, currentUser.getId(), message.senderUserId());
+        }
+        store.saveClarificationEntry(thread.threadId(), currentUser.getId(), trimmed);
+        StoredThread updated = store.updateClarificationThreadStatus(thread.threadId(), ClarificationStatus.OPEN);
 
-        thread = threadRepository.save(thread);
-        saveEntry(thread, currentUser, trimmed);
-        thread.setStatus(ClarificationStatus.OPEN);
-        thread = threadRepository.save(thread);
-
-        auditService.log("CLARIFICATION_CREATED", "ClarificationThread", thread.getId(),
+        auditService.log("CLARIFICATION_CREATED", "ClarificationThread", thread.threadId(),
                 "Message " + messageId + " requester " + currentUser.getId());
 
-        return toDetailResponse(thread, loadEntries(thread.getId(), Pageable.ofSize(50)));
+        return toDetailResponse(updated, store.entriesForThread(thread.threadId(), Pageable.ofSize(50)));
     }
 
-    @Transactional
     public ClarificationResponse replyToThread(Long threadId, String content) {
         User principal = securityUtils.getCurrentUser();
         requireActive(principal);
         User currentUser = managedUser(principal);
 
-        ClarificationThread thread = threadRepository.findById(threadId)
-                .orElseThrow(() -> new ResourceNotFoundException("ClarificationThread", threadId));
+        StoredThread thread = store.getClarificationThread(threadId);
+        if (thread == null) {
+            throw new ResourceNotFoundException("ClarificationThread", threadId);
+        }
 
         if (!isParticipant(thread, currentUser.getId())) {
             throw new ForbiddenException("Only the requester and the original message sender can reply to this clarification.");
@@ -92,65 +91,72 @@ public class ClarificationService {
             throw new BadRequestException("Reply content cannot be blank.");
         }
 
-        saveEntry(thread, currentUser, trimmed);
-        boolean bySender = thread.getSender().getId().equals(currentUser.getId());
-        thread.setStatus(bySender ? ClarificationStatus.ANSWERED : ClarificationStatus.OPEN);
-        thread = threadRepository.save(thread);
+        store.saveClarificationEntry(thread.threadId(), currentUser.getId(), trimmed);
+        boolean bySender = thread.senderUserId().equals(currentUser.getId());
+        StoredThread updated = store.updateClarificationThreadStatus(thread.threadId(),
+                bySender ? ClarificationStatus.ANSWERED : ClarificationStatus.OPEN);
 
-        auditService.log("CLARIFICATION_REPLIED", "ClarificationThread", thread.getId(),
-                "Message " + thread.getMessage().getId() + " author " + currentUser.getId());
+        auditService.log("CLARIFICATION_REPLIED", "ClarificationThread", thread.threadId(),
+                "Message " + thread.messageId() + " author " + currentUser.getId());
 
-        return toDetailResponse(thread, loadEntries(thread.getId(), Pageable.ofSize(50)));
+        return toDetailResponse(updated, store.entriesForThread(thread.threadId(), Pageable.ofSize(50)));
     }
 
-    @Transactional(readOnly = true)
     public Page<ClarificationResponse> listThreadsForMessage(Long messageId, Pageable pageable) {
         User currentUser = securityUtils.getCurrentUser();
-        Message message = messageRepository.findById(messageId)
-                .orElseThrow(() -> new ResourceNotFoundException("Message", messageId));
-
-        if (message.getSender().getId().equals(currentUser.getId())) {
-            return threadRepository.findByMessageIdOrderByUpdatedAtDesc(messageId, pageable)
-                    .map(this::toSummaryResponse);
+        StoredMessage message = store.getMessage(messageId);
+        if (message == null) {
+            throw new ResourceNotFoundException("Message", messageId);
         }
 
-        if (recipientRepository.existsByMessageIdAndRecipientId(messageId, currentUser.getId())) {
-            var thread = threadRepository.findByMessageIdAndRequesterId(messageId, currentUser.getId());
-            if (thread.isEmpty()) {
+        if (message.senderUserId().equals(currentUser.getId())) {
+            StoredPage<StoredThread> page = store.threadsForMessage(messageId, pageable);
+            Map<Long, String> names = namesById(userIdsOf(page.content()));
+            List<ClarificationResponse> responses = page.content().stream()
+                    .map(t -> toSummaryResponse(t, names))
+                    .toList();
+            return new PageImpl<>(responses, pageable, page.totalElements());
+        }
+
+        if (store.isRecipient(messageId, currentUser.getId())) {
+            StoredThread thread = store.getClarificationThread(messageId, currentUser.getId());
+            if (thread == null) {
                 return new PageImpl<>(List.of(), pageable, 0);
             }
-            var single = List.of(toSummaryResponse(thread.get()));
+            var single = List.of(toSummaryResponse(thread, namesById(userIdsOf(List.of(thread)))));
             return new PageImpl<>(single, pageable, 1);
         }
 
         throw new ForbiddenException("You cannot view clarifications for this message.");
     }
 
-    @Transactional(readOnly = true)
     public ClarificationResponse getThread(Long threadId, Pageable pageable) {
         User currentUser = securityUtils.getCurrentUser();
-        ClarificationThread thread = threadRepository.findById(threadId)
-                .orElseThrow(() -> new ResourceNotFoundException("ClarificationThread", threadId));
+        StoredThread thread = store.getClarificationThread(threadId);
+        if (thread == null) {
+            throw new ResourceNotFoundException("ClarificationThread", threadId);
+        }
 
         if (!isParticipant(thread, currentUser.getId())) {
             throw new ForbiddenException("You cannot view this clarification thread.");
         }
 
-        return toDetailResponse(thread, loadEntries(threadId, pageable));
+        return toDetailResponse(thread, store.entriesForThread(threadId, pageable));
     }
 
-    @Transactional(readOnly = true)
     public ClarificationCountsResponse getCounts(Long messageId) {
         User currentUser = securityUtils.getCurrentUser();
-        Message message = messageRepository.findById(messageId)
-                .orElseThrow(() -> new ResourceNotFoundException("Message", messageId));
+        StoredMessage message = store.getMessage(messageId);
+        if (message == null) {
+            throw new ResourceNotFoundException("Message", messageId);
+        }
 
-        if (!message.getSender().getId().equals(currentUser.getId())) {
+        if (!message.senderUserId().equals(currentUser.getId())) {
             throw new ForbiddenException("Only the sender can view clarification analytics.");
         }
 
-        long total = threadRepository.countByMessageId(messageId);
-        long open = threadRepository.countByMessageIdAndStatus(messageId, ClarificationStatus.OPEN);
+        long total = store.clarificationTotal(messageId);
+        long open = store.clarificationOpen(messageId);
         return ClarificationCountsResponse.builder()
                 .total(total)
                 .open(open)
@@ -158,29 +164,19 @@ public class ClarificationService {
                 .build();
     }
 
-    @Transactional(readOnly = true)
     public Page<ClarificationResponse> getIncoming(Pageable pageable) {
         securityUtils.requireAnyRole(Role.PO, Role.PC);
         User currentUser = securityUtils.getCurrentUser();
-        return threadRepository.findBySenderIdOrderByUpdatedAtDesc(currentUser.getId(), pageable)
-                .map(this::toSummaryResponse);
+        StoredPage<StoredThread> page = store.incomingThreads(currentUser.getId(), pageable);
+        Map<Long, String> names = namesById(userIdsOf(page.content()));
+        List<ClarificationResponse> responses = page.content().stream()
+                .map(t -> toSummaryResponse(t, names))
+                .toList();
+        return new PageImpl<>(responses, pageable, page.totalElements());
     }
 
-    private Page<ClarificationEntry> loadEntries(Long threadId, Pageable pageable) {
-        return entryRepository.findByThreadIdOrderByCreatedAtAsc(threadId, pageable);
-    }
-
-    private void saveEntry(ClarificationThread thread, User author, String content) {
-        ClarificationEntry entry = ClarificationEntry.builder()
-                .thread(thread)
-                .author(author)
-                .content(content)
-                .build();
-        entryRepository.save(entry);
-    }
-
-    private boolean isParticipant(ClarificationThread thread, Long userId) {
-        return thread.getRequester().getId().equals(userId) || thread.getSender().getId().equals(userId);
+    private boolean isParticipant(StoredThread thread, Long userId) {
+        return thread.requesterUserId().equals(userId) || thread.senderUserId().equals(userId);
     }
 
     private User managedUser(User principal) {
@@ -194,46 +190,78 @@ public class ClarificationService {
         }
     }
 
-    private ClarificationResponse toSummaryResponse(ClarificationThread thread) {
+    private Role roleOf(String role) {
+        if (role == null) {
+            return null;
+        }
+        try {
+            return Role.valueOf(role);
+        } catch (IllegalArgumentException e) {
+            return null;
+        }
+    }
+
+    private List<Long> userIdsOf(List<StoredThread> threads) {
+        return threads.stream().flatMap(t -> java.util.stream.Stream.of(t.requesterUserId(), t.senderUserId()))
+                .distinct().toList();
+    }
+
+    private Map<Long, String> namesById(List<Long> userIds) {
+        Map<Long, String> names = new HashMap<>();
+        if (userIds.isEmpty()) {
+            return names;
+        }
+        for (User u : userRepository.findUsersByIds(userIds)) {
+            names.put(u.getId(), u.getName());
+        }
+        return names;
+    }
+
+    private ClarificationResponse toSummaryResponse(StoredThread thread, Map<Long, String> names) {
         return ClarificationResponse.builder()
-                .threadId(thread.getId())
-                .messageId(thread.getMessage().getId())
-                .messageTitle(thread.getMessage().getTitle())
-                .requesterId(thread.getRequester().getId())
-                .requesterName(thread.getRequester().getName())
-                .senderId(thread.getSender().getId())
-                .senderName(thread.getSender().getName())
-                .senderRole(thread.getSender().getRole().name())
-                .status(thread.getStatus())
-                .createdAt(thread.getCreatedAt() != null ? thread.getCreatedAt().toString() : null)
-                .updatedAt(thread.getUpdatedAt() != null ? thread.getUpdatedAt().toString() : null)
+                .threadId(thread.threadId())
+                .messageId(thread.messageId())
+                .messageTitle(thread.messageTitle())
+                .requesterId(thread.requesterUserId())
+                .requesterName(names.getOrDefault(thread.requesterUserId(), ""))
+                .senderId(thread.senderUserId())
+                .senderName(names.getOrDefault(thread.senderUserId(), ""))
+                .senderRole(thread.senderRole())
+                .status(thread.status())
+                .createdAt(thread.createdAt() != null ? thread.createdAt().toString() : null)
+                .updatedAt(thread.updatedAt() != null ? thread.updatedAt().toString() : null)
                 .build();
     }
 
-    private ClarificationResponse toDetailResponse(ClarificationThread thread, Page<ClarificationEntry> entries) {
-        List<ClarificationEntryResponse> entryResponses = entries.getContent().stream()
+    private ClarificationResponse toDetailResponse(StoredThread thread, StoredPage<StoredEntry> entries) {
+        List<Long> ids = java.util.stream.Stream.concat(
+                        java.util.stream.Stream.of(thread.requesterUserId(), thread.senderUserId()),
+                        entries.content().stream().map(StoredEntry::authorUserId))
+                .distinct().toList();
+        Map<Long, String> names = namesById(ids);
+        List<ClarificationEntryResponse> entryResponses = entries.content().stream()
                 .map(e -> ClarificationEntryResponse.builder()
-                        .id(e.getId())
-                        .authorId(e.getAuthor().getId())
-                        .authorName(e.getAuthor().getName())
-                        .content(e.getContent())
-                        .createdAt(e.getCreatedAt() != null ? e.getCreatedAt().toString() : null)
+                        .id(e.entryId())
+                        .authorId(e.authorUserId())
+                        .authorName(names.getOrDefault(e.authorUserId(), ""))
+                        .content(e.content())
+                        .createdAt(e.createdAt() != null ? e.createdAt().toString() : null)
                         .build())
                 .toList();
         return ClarificationResponse.builder()
-                .threadId(thread.getId())
-                .messageId(thread.getMessage().getId())
-                .messageTitle(thread.getMessage().getTitle())
-                .requesterId(thread.getRequester().getId())
-                .requesterName(thread.getRequester().getName())
-                .senderId(thread.getSender().getId())
-                .senderName(thread.getSender().getName())
-                .senderRole(thread.getSender().getRole().name())
-                .status(thread.getStatus())
-                .createdAt(thread.getCreatedAt() != null ? thread.getCreatedAt().toString() : null)
-                .updatedAt(thread.getUpdatedAt() != null ? thread.getUpdatedAt().toString() : null)
+                .threadId(thread.threadId())
+                .messageId(thread.messageId())
+                .messageTitle(thread.messageTitle())
+                .requesterId(thread.requesterUserId())
+                .requesterName(names.getOrDefault(thread.requesterUserId(), ""))
+                .senderId(thread.senderUserId())
+                .senderName(names.getOrDefault(thread.senderUserId(), ""))
+                .senderRole(thread.senderRole())
+                .status(thread.status())
+                .createdAt(thread.createdAt() != null ? thread.createdAt().toString() : null)
+                .updatedAt(thread.updatedAt() != null ? thread.updatedAt().toString() : null)
                 .entries(entryResponses)
-                .totalEntries(entries.getTotalElements())
+                .totalEntries(entries.totalElements())
                 .build();
     }
 }
